--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5"
+  },
+  "dependencies": {
+    "gulp-cssnano": "^2.1.3"
   }
 }
