--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.24.5",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5"
   },
   "dependencies": {
+    "font-face-mixin": "^1.1.0",
     "gulp-cssnano": "^2.1.3"
   }
 }
