--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "browser-sync": "^2.24.5",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.4",
     "gulp-imagemin": "^4.1.0",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5"
